--- a/package.json
+++ b/package.json
@@ -16,10 +16,8 @@
     "@reduxjs/toolkit": "^2.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.3",
-    "redux": "^5.0.1",
-    "zod": "^3.24.1"
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
